# easy-loupe

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  code_review_findings.md  muff.toml  pyproject.toml  tox.ini
.codex/rules/: default.rules
.github/workflows/: python-package.yml
docs/maintenance-guides/: README.md  packaging-and-startup.md  previews-exif-autofocus.md  recursive-loading.md  tagging-metadata-operations.md  ui-workflows.md
docs/roadmaps/: README.md  recursive-loading.md
docs/user-guide/: README.md  browse-view.md  compare-view.md  culling-view.md  getting-started.md  inspection-tools.md  organize-and-xmp.md  scenes.md  tagging-and-filtering.md
easy_cull/: __init__.py  __main__.py
easy_cull/analysis/: __init__.py  scenes.py
easy_cull/core/: __init__.py  exif.py  folder_loading.py  metadata.py  photo_library.py  preview.py  records.py
easy_cull/operations/: __init__.py  common.py  export.py  xmp.py
easy_cull/ui/: __init__.py  app.py  folder_access.py  identity.py  launch.py  theme.py  widgets.py  workers.py
easy_loupe/: __init__.py  __main__.py  progress.py
easy_loupe/analysis/: __init__.py  scenes.py
easy_loupe/core/: __init__.py  exif.py  folder_loading.py  grouped_exif.py  histogram.py  metadata.py  photo_groups.py  photo_library.py  preview.py  records.py  recursive_loading.py
easy_loupe/operations/: __init__.py  common.py  export.py  xmp.py
easy_loupe/progress/: __init__.py  callbacks.py  (+2 more)
easy_photo_culling/: __init__.py  __main__.py
tests/: test_package_main.py  test_progress.py
(+184 files in other folders)
